--- a/Metallb/Untitled f98ba629d8514b638ad81dc2504e72e6.md
+++ b/Metallb/Untitled f98ba629d8514b638ad81dc2504e72e6.md
@@ -161,7 +161,10 @@
     ---
     
     ```bash
+    helm repo add metallb https://metallb.github.io/metallb
+     
     helm install metallb metallb/metallb
+     
     ```
     
     MetalLB is now running in the cluster
