--- a/Metallb/Untitled f98ba629d8514b638ad81dc2504e72e6.md
+++ b/Metallb/Untitled f98ba629d8514b638ad81dc2504e72e6.md
@@ -125,7 +125,7 @@
     **NOTE:** This command is run only on Master Node
     
     ```bash
-    kubectl apply -f https://docs.projectcalico.org/v3.14/manifests/calico.yaml
+    kubectl apply -f https://github.com/projectcalico/calico/blob/master/manifests/calico.yaml
     ```
     
     ---
